---
source: crates/compiler/semantic/tests/common/mod.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let result = undefined_function(42); return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'undefined_function'
   ╭─[ semantic_tests::functions::function_calls::test_function_calls:1:26 ]
   │
 1 │ fn test() { let result = undefined_function(42); return; }
   │                          ─────────┬────────  
   │                                   ╰────────── Undeclared variable 'undefined_function'
───╯

============================================================

--- Input 2 (ERROR) ---
fn helper(x: felt) -> felt { return x; } fn test() { let result = helper(undefined_var); return (); }
--- Diagnostics ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::functions::function_calls::test_function_calls:1:74 ]
   │
 1 │ fn helper(x: felt) -> felt { return x; } fn test() { let result = helper(undefined_var); return (); }
   │                                                                          ──────┬──────  
   │                                                                                ╰──────── Undeclared variable 'undefined_var'
───╯
